--- a/dotfile/.gitconfig
+++ b/dotfile/.gitconfig
@@ -22,3 +22,6 @@
 	graphlog = log --oneline --graph --color --all --decorate
 	last = log -1 HEAD
 	unstage = reset HEAD --
+	syncbranch = fetch --prune
+[alias "remote.branch"]
+	status = remote show origin
