--- a/devtools/nvim/coc-settings.json
+++ b/devtools/nvim/coc-settings.json
@@ -16,5 +16,39 @@
     // coc-pyright
     "pyright.enable": true,
     "python.analysis.autoImportCompletions": true,
-    "python.analysis.autoSearchPaths": true
+    "python.analysis.autoSearchPaths": true,
+    // coc-git
+    "git.command": "git",
+    "git.remoteName": "origin",
+    "git.addGBlameToVirtualText": true,
+    "git.conflict.enabled": true,
+    // lsp
+    "languageserver": {
+        "bash": {
+            "command": "bash-language-server",
+            "args": ["start"],
+            "filetypes": ["sh", "bash"]
+        },
+        "clangd": {
+            "command": "clangd",
+            "rootPatterns": ["compile_flags.txt", "compile_commands.json"],
+            "filetypes": ["c", "cc", "cpp", "c++", "objc", "objcpp"]
+        },
+        "python": {
+            "command": "python",
+            "args": ["-mpyls", "-vv", "--log-file", "/tmp/lsp_python.log"],
+            "filetypes": ["python"],
+            "settings": {
+                "pyls": {
+                    "enable": true,
+                    "trace": {"server": "verbose"}
+                }
+            }
+        },
+        "sql": {
+            "command": "sql-language-server",
+            "args": ["up", "--method", "stdio"],
+            "filetypes": ["sql", "mysql"]
+        }
+    }
 }
