feature: Update coc and zsh config

--- a/configs/coc-settings.json
+++ b/configs/coc-settings.json
@@ -1,49 +1,26 @@
 {
-    // preference
-    "suggest.snippetIndicator": "▶",
     "suggest.maxCompleteItemCount": 20,
     "suggest.timeout": 500,
     "suggest.minTriggerInputLength": 2,
-    "coc.preferences.formatOnSaveFiletypes": ["python"],
-    // coc list
-    "list.insertMappings": {
-        "<C-v>": "action:vsplit",
-        "<C-s>": "action:split"
-    },
     // coc-explorer
+    "explorer.width": 30,
+    "explorer.buffer.root.template": "[icon & 1] OPEN EDITORS",
+    "explorer.file.root.template": "[icon & 1] PROJECT ([root])",
+    "explorer.file.child.template": "[git | 2] [selection | clip | 1] [indent][icon | 1] [diagnosticError & 1][filename omitCenter 1][modified][readonly] [linkIcon & 1][link growRight 1 omitCenter 5]",
+    "explorer.file.showHiddenFiles": true,
     "explorer.icon.enableNerdfont": true,
-    "explorer.git.enable": true,
     // coc-pyright
-    "pyright.enable": true,
+    "python.venvPath": "~/.local/share/virtualenvs/",
     "python.analysis.autoImportCompletions": true,
     "python.analysis.autoSearchPaths": true,
-    // coc-git
-    "git.command": "git",
-    "git.remoteName": "origin",
-    "git.addGBlameToVirtualText": true,
-    "git.conflict.enabled": true,
+    "pyright.enable": true,
     // lsp
     "languageserver": {
         "bash": {
             "command": "bash-language-server",
             "args": ["start"],
-            "filetypes": ["sh", "bash"]
-        },
-        "clangd": {
-            "command": "clangd",
-            "rootPatterns": ["compile_flags.txt", "compile_commands.json"],
-            "filetypes": ["c", "cc", "cpp", "c++", "objc", "objcpp"]
-        },
-        "sql": {
-            "command": "sql-language-server",
-            "args": ["up", "--method", "stdio"],
-            "filetypes": ["sql", "mysql"]
-        },
-        "golang": {
-            "command": "gopls",
-            "args": ["serve", "-debug", "0.0.0.0:8484", "-rpc.trace"],
-            "rootPatterns": ["go.mod"],
-            "filetypes": ["go"]
+            "filetypes": ["sh", "bash"],
+            "ignoredRootPaths": ["~"]
         }
     }
 }
